--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Effective JavaScript: Frogger</title>
+    <title>Two-Way Traffic</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <script src="js/config.js"></script>
     <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <script src="js/score.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
